planCacheKey related info not set on OpDebug for write commands

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.10
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This bug is likely introduced when refactoring get_executor.cpp in the 7.0 release cycle. We have extracted a function setOpDebugPlanCacheInfo to fill the "planCacheKey" and other information on "OpDebug", but this function is not called in every command path, notably this is missed in some write command paths.

            Assignee:
            Rui Liu (Inactive)
            Reporter:
            Rui Liu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: