SERVER-100459 Fill planCacheKey and related debug info on write paths (#32012)

GitOrigin-RevId: 99d0cc0036643330d3762ba1ccc24655c96133fb